--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     width: 100%;
 }
 .headbody{
-    background-image: url("image/Flag_of_the_People's_Republic_of_China.svg");
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/f/fa/Flag_of_the_People%27s_Republic_of_China.svg");
 }
 .up{
     width: 100%;
